2007-08-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Add HPUX, AIX and NetBSD.  Thanks to
	Daniel Berger, Yutaka KANEMOTO and Andre Nathan respectively.

2007-08-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Don't reinstall dependencies
	existing in the install dir.  Don't install dependencies for older
	versions of the gem we're installing.  #installed_gems now contains
	loaded gemspecs.  Always prefer local gems.  Handle globs correctly.
	All deps are now installed into the install_dir.
	* lib/rubygems/commands/install_command.rb: Switch to
	Gem::DependencyInstaller.  Warn when -y is given, it will be removed.
	Try our best to install everything the user asked.
	* lib/rubygems.rb: Gem.bindir now handles Pathname correctly.
	* lib/rubygems/remote_fetcher.rb: Don't downcase anymore.

2007-08-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Add installation from local
	gems.  Install gems in the correct order.  Handle -E, -f,
	--ignore-dependencies, -i, -r, -l, -b, -P, -w, -v options for `gem
	install`
	* test/gemutilities.rb: Work around OS X /private/tmp.
	* lib/rubygems/platform.rb: Switch to using arch instead of target_*
	for JRuby compatibility.  Thanks to Nick Sieger.

2007-08-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Add working but unfinished
	Gem::DependencyInstaller.
	* lib/rubygems/source_info_cache.rb: Add #search_with_source.
	* lib/rubygems/dependency_list.rb: Move #fill_dependencies to
	Gem::DependencyInstaller
	* lib/rubygems/platform.rb: Split from specification.rb.  Add methods
	to recognize platforms from Config::CONFIG.
	* lib/rubygems.rb: Add Gem::platforms.
	* lib/rubygems/specification.rb: Disallow String platforms.

2007-08-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb: Search by Gem::Dependenency.
	* lib/rubygems/source_index: Search by Gem::Dependenency.